--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 0.80~sparky20170919 (2017-09-19)
+-------------------------------------------------------------------------------
+  * Changed Audacious to DeaDBeeF in the multimedia schema
+
+-------------------------------------------------------------------------------
+  Version 0.80~sparky20170824 (2017-08-24)
+-------------------------------------------------------------------------------
+  * Updated up to version 0.80
+
+-------------------------------------------------------------------------------
   Version 0.71~sparky20170730 (2017-07-29)
 -------------------------------------------------------------------------------
   * Minnor update of schema-rescue.pl
