--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Files: obmenu-generator, README.md
     Copyright (C) 2011-2017 Daniel "Trizen" Șuteu <echo dHJpemVueEBnbWFpbC5jb20K | base64 -d>
     License: GPLv3
 
-File: schema.pl
+File: schema*.pl
     Copyright (C) 2015, 2016, 2017 Paweł Pijanowski <pavroo@onet.eu>
     Copyright (C) 2011-2017 Daniel "Trizen" Șuteu <echo dHJpemVueEBnbWFpbC5jb20K | base64 -d>
     License: GPLv3
