--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,19 @@
 -------------------------------------------------------------------------------
+  Version 0.82~sparky20171024 (2017-10-24)
+-------------------------------------------------------------------------------
+  * Updated up to version 0.82
+
+-------------------------------------------------------------------------------
+  Version 0.81~sparky20171006 (2017-10-05)
+-------------------------------------------------------------------------------
+  * Small bugs fixing
+
+-------------------------------------------------------------------------------
+  Version 0.81~sparky20171005 (2017-10-05)
+-------------------------------------------------------------------------------
+  * Updated up to version 0.81
+
+-------------------------------------------------------------------------------
   Version 0.80~sparky20170919 (2017-09-19)
 -------------------------------------------------------------------------------
   * Changed Audacious to DeaDBeeF in the multimedia schema
