--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky201711125 (2017-11-25)
+-------------------------------------------------------------------------------
+  * Fixed avidemux patch in schema-media.pl
+
+-------------------------------------------------------------------------------
+  Version 0.84~sparky201711106 (2017-11-06)
+-------------------------------------------------------------------------------
+  * Updated up to version 0.84
+
+-------------------------------------------------------------------------------
   Version 0.82~sparky20171024 (2017-10-24)
 -------------------------------------------------------------------------------
   * Updated up to version 0.82
