--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20171207 (2017-12-07)
+-------------------------------------------------------------------------------
+  * Changed PCmanFM to Thunar
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky201711125 (2017-11-25)
 -------------------------------------------------------------------------------
   * Fixed avidemux patch in schema-media.pl
