--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20171216 (2017-12-16)
+-------------------------------------------------------------------------------
+  * Added system-log-viewer to schema-rescue.pl
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20171207 (2017-12-07)
 -------------------------------------------------------------------------------
   * Changed PCmanFM to Thunar
