--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180103 (2018-01-03)
+-------------------------------------------------------------------------------
+  * Removed zypper from rescue shema
+  * Removed videcut and tagtool from multimedia shema
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20171216 (2017-12-16)
 -------------------------------------------------------------------------------
   * Added system-log-viewer to schema-rescue.pl
