--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180104 (2018-01-04)
+-------------------------------------------------------------------------------
+  * Added sparky-fileopen to shema for file menager config
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180103 (2018-01-03)
 -------------------------------------------------------------------------------
   * Removed zypper from rescue shema
