--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180114 (2018-01-14)
+-------------------------------------------------------------------------------
+  * Fixed openbox autostart.sh file name
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180104 (2018-01-04)
 -------------------------------------------------------------------------------
   * Added sparky-fileopen to shema for file menager config
