--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180305 (2018-03-05)
+-------------------------------------------------------------------------------
+  * Small changes in rescue schema
+
+-------------------------------------------------------------------------------
+  Version 0.84~sparky20180118 (2018-01-18)
+-------------------------------------------------------------------------------
+  * Replaced recordmydesktop by vokoscreen of the media schema.pl
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180114 (2018-01-14)
 -------------------------------------------------------------------------------
   * Fixed openbox autostart.sh file name
