--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180317 (2018-03-17)
+-------------------------------------------------------------------------------
+  * Changed remsu to gksudo
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180305 (2018-03-05)
 -------------------------------------------------------------------------------
   * Small changes in rescue schema
