--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180401 (2018-04-01)
+-------------------------------------------------------------------------------
+  * Changed gksudo to remsu and su-to-root -X -c
+  * Changed x-terminal-emulator to sparky-xterm
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180317 (2018-03-17)
 -------------------------------------------------------------------------------
   * Changed remsu to gksudo
