--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180529 (2018-05-29)
+-------------------------------------------------------------------------------
+  * Removed reportbug from rescue schema
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180401 (2018-04-01)
 -------------------------------------------------------------------------------
   * Changed gksudo to remsu and su-to-root -X -c
