--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180620 (2018-06-20)
+-------------------------------------------------------------------------------
+  * Changed remsu and su-to-root settings to new sparky-xterm-exec script
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180529 (2018-05-29)
 -------------------------------------------------------------------------------
   * Removed reportbug from rescue schema
