--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180728 (2018-07-28)
+-------------------------------------------------------------------------------
+  * No changes in code
+  * Added missing dependecy
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180620 (2018-06-20)
 -------------------------------------------------------------------------------
   * Changed remsu and su-to-root settings to new sparky-xterm-exec script
