--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180826 (2018-08-26)
+-------------------------------------------------------------------------------
+  * No changes in code
+  * Fixed postrm and postinst script
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180728 (2018-07-28)
 -------------------------------------------------------------------------------
   * No changes in code
