--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180925 (2018-09-25)
+-------------------------------------------------------------------------------
+  * Changed Evinto to Qpdfview of rescue schema
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180826 (2018-08-26)
 -------------------------------------------------------------------------------
   * No changes in code
