--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,13 @@
 -------------------------------------------------------------------------------
+  Version 0.84~sparky20180926 (2018-09-26)
+-------------------------------------------------------------------------------
+  * Removed system-storage-manager from rescue schema
+  * Removed transmageddon, ffado-mixer from multimedia schema
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180925 (2018-09-25)
 -------------------------------------------------------------------------------
-  * Changed Evinto to Qpdfview of rescue schema
+  * Changed Evince to Qpdfview of rescue schema
 
 -------------------------------------------------------------------------------
   Version 0.84~sparky20180826 (2018-08-26)
