--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,21 @@
 -------------------------------------------------------------------------------
+  Version 0.85~sparky20181005.1 (2018-10-05)
+-------------------------------------------------------------------------------
+  * Added aptus to resume schema
+  * Changed sparky-xterm-exec na sparky-remsu-exec of rescue schema
+
+-------------------------------------------------------------------------------
+  Version 0.85~sparky20181005 (2018-10-05)
+-------------------------------------------------------------------------------
+  * Fixed gparted & ddrescue-gui entry of rescue schema
+  * Added chntpw & vim to rescue schema
+
+-------------------------------------------------------------------------------
+  Version 0.85~sparky20181003 (2018-10-03)
+-------------------------------------------------------------------------------
+  * Updated up to 0.85
+
+-------------------------------------------------------------------------------
   Version 0.84~sparky20180926 (2018-09-26)
 -------------------------------------------------------------------------------
   * Removed system-storage-manager from rescue schema
