--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.85~sparky20181126 (2018-11-26)
+-------------------------------------------------------------------------------
+  * Removed systemd-ui from rescue schema
+
+-------------------------------------------------------------------------------
   Version 0.85~sparky20181005.1 (2018-10-05)
 -------------------------------------------------------------------------------
   * Added aptus to resume schema
