--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.85~sparky20190424 (2019-04-24)
+-------------------------------------------------------------------------------
+  * Added qt-fsarchiver to rescue schema
+
+-------------------------------------------------------------------------------
   Version 0.85~sparky20181126 (2018-11-26)
 -------------------------------------------------------------------------------
   * Removed systemd-ui from rescue schema
