--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.85~sparky20190806 (2019-08-06)
+-------------------------------------------------------------------------------
+  * Changed leafpad with sparky-editor
+
+-------------------------------------------------------------------------------
   Version 0.85~sparky20190424 (2019-04-24)
 -------------------------------------------------------------------------------
   * Added qt-fsarchiver to rescue schema
